--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /.vs/CSharp-Basics/FileContentIndex/ce9c6be2-62e0-4961-93ac-e13fe73eb864.vsidx
+/.vs/CSharp-Basics/FileContentIndex/bd0d42ec-2f07-4fdf-a2c7-a587eb904bdd.vsidx
+/.vs/CSharp-Basics/FileContentIndex/9467d3cc-8e11-425b-ba51-4ecc9749bfe4.vsidx
+/.vs/CSharp-Basics/FileContentIndex/8905bbff-52f5-4aad-8cb9-08c335d40768.vsidx
+/.vs/CSharp-Basics/FileContentIndex/7091a3e8-475c-4fa1-9b43-f4a38e000a50.vsidx
+/.vs/ProjectEvaluation
