--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 /.vs/CSharp-Basics/FileContentIndex/8905bbff-52f5-4aad-8cb9-08c335d40768.vsidx
 /.vs/CSharp-Basics/FileContentIndex/7091a3e8-475c-4fa1-9b43-f4a38e000a50.vsidx
 /.vs/ProjectEvaluation
+/SOLIDPrinciples/obj/Debug/netcoreapp3.1
+/SOLIDPrinciples/bin/Debug/netcoreapp3.1
+/.vs/CSharp-Basics/FileContentIndex
