--- a/CSharp-Basics/CSharp-Basics.csproj
+++ b/CSharp-Basics/CSharp-Basics.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>CSharp_Basics</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
 </Project>
