--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,55 @@
-﻿################################################################################
-# This .gitignore file was automatically created by Microsoft(R) Visual Studio.
-################################################################################
+﻿## Ignore Visual Studio temporary files, build results, and user-specific files
 
-/.vs/CSharp-Basics/FileContentIndex/ce9c6be2-62e0-4961-93ac-e13fe73eb864.vsidx
-/.vs/CSharp-Basics/FileContentIndex/bd0d42ec-2f07-4fdf-a2c7-a587eb904bdd.vsidx
-/.vs/CSharp-Basics/FileContentIndex/9467d3cc-8e11-425b-ba51-4ecc9749bfe4.vsidx
-/.vs/CSharp-Basics/FileContentIndex/8905bbff-52f5-4aad-8cb9-08c335d40768.vsidx
-/.vs/CSharp-Basics/FileContentIndex/7091a3e8-475c-4fa1-9b43-f4a38e000a50.vsidx
-/.vs/ProjectEvaluation
-/SOLIDPrinciples/obj/Debug/netcoreapp3.1
-/SOLIDPrinciples/bin/Debug/netcoreapp3.1
-/.vs/CSharp-Basics/FileContentIndex
+# Build results
+[Bb]in/
+[Oo]bj/
+[Ll]og/
+*.log
+
+# User-specific files
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Mono Auto Generated Files
+mono_crash.*
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# ASP.NET Scaffolding
+ScaffoldingReadMe.txt
+
+# NuGet Packages
+*.nupkg
+# The packages folder can be ignored if package restore is enabled
+**/packages/*
+!**/packages/build/
+!**/packages/repositories.config
+
+# Visual Studio Code workspace settings
+.vscode/
+
+# Others
+*.vspscc
+*.vssscc
+*.dbmdl
+*.pdb
+*.cache
+*.zip
+*.exe
+*.dll
+*.msi
+*.mp4
+*.avi
+*.sdf
+*.sqlite
+*.sln.ide
+*.sln.cache
+*.vs/
+
+# JetBrains Rider
+.idea/
+*.sln.iml
